src/objects/Negotiation_Log__c.object
<CustomObject>
    <fields>
        <fullName>Claim__c</fullName>
        <inlineHelpText>DO NOT EDIT</inlineHelpText>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Negotiation Log</relationshipLabel>
        <relationshipName>Negotiation_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date of Correspondence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo_Description__c</fullName>
        <inlineHelpText>Please add important details of the meeting and decision that were made.</inlineHelpText>
        <label>Memo Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Memo_Title__c</fullName>
        <inlineHelpText>I.e. was this a voice conference?  Email?  Face to face meeting?</inlineHelpText>
        <label>Memo Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Negotiation Log</label>
    <nameField>
        <displayFormat>NL-{00000}</displayFormat>
        <label>Negotiation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiation Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>